--- a/iron/debian/control
+++ b/iron/debian/control
@@ -1,10 +1,10 @@
-Package: helloworld
+Package: iron
 Version: 1.0-1
 Section: base
 Priority: optional
-Architecture: i386
-Depends: libsomethingorrather (>= 1.2.13), anotherDependency (>= 1.2.6)
-Maintainer: Your Name <you@email.com>
-Description: Hello World
- When you need some sunshine, just run this
- small program!
+Architecture: all
+Depends: openssl
+Maintainer: Paolo Lulli <paolo@lulli.net>
+Description: Iron CA, server and client cert management
+ manage a local CA, create server certificates, create client CSR
+ sign CSR and create client certificates
