Added (experimental) debug command

--- a/iron/libexec/Makefile.am
+++ b/iron/libexec/Makefile.am
@@ -9,5 +9,6 @@ nobase_dist_libexec_SCRIPTS = iron\
 	iron/iron-ca\
 	iron/iron-certificate\
 	iron/iron-client\
-	iron/iron-service
+	iron/iron-service\
+	iron/iron-debug
 
